fix search on mobile

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -41,10 +41,6 @@ img {
     }
 }
 
-.cursor-pointer {
-    cursor: pointer;
-}
-
 .collapse > ul {
     width: 100%;
 }
