--- a/src/app/pages/home-page/components/banner/banner.component.scss
+++ b/src/app/pages/home-page/components/banner/banner.component.scss
@@ -35,4 +35,8 @@
 .title {
     font-size: 64px;
     line-height: 75px;
+
+    @media (max-width: 992px) {
+        font-size: 55px;
+    }
 }
